# streamlit-typing-example

./: README.md  pyproject.toml
examples/: mypy-st.py  pastries.py
tests/: test_playground.py
typing_playground/: playground.py
