[tool.poetry]
name = "streamlit-typing-example"
version = "0.1.0"
description = "Code examples for streamlit + mypy"
authors = ["Harald Husum <harald.husum@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    {include = "examples"},
    {include = "typing_playground"},
]

[tool.poetry.dependencies]
python = "~3.10"
streamlit = "^1.13.0"
mypy = "^0.982"
pandas-stubs = "^1.5.0.221012"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
strict = true

show_error_codes = true
