[tool.poetry]
name = "streamlit-typing-example"
version = "0.1.0"
description = "Code examples for streamlit + mypy"
authors = ["Harald Husum <harald.husum@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    {include = "examples"},
    {include = "typing_playground"},
]

[tool.poetry.dependencies]
python = "~3.10"
streamlit = "^1.13.0"
mypy = "^0.982"
pandas-stubs = "^1.5.0.221012"
streamlit-ace = "^0.1.1"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
isort = "^5.10.1"
pytest = "^7.1.3"
pytest-cov = "^4.0.0"
pytest-mock = "^3.10.0"
flake8 = "^5.0.4"
pylint = "^2.15.5"
flake8-pyproject = "^1.1.0.post0"

[tool.mypy]
strict = true

[tool.flake8]
max-line-length = 88

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

show_error_codes = true

