[tool.poetry]
name = "streamlit-typing-example"
version = "0.1.0"
description = "Code examples for streamlit + mypy"
authors = ["Harald Husum <harald.husum@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    {include = "examples"},
    {include = "typing_playground"},
]

[tool.poetry.dependencies]
python = "~3.10"
streamlit = "^1.16.0"
mypy = "^0.991"
pandas-stubs = "^1.5.2.221213"
streamlit-ace = "^0.1.1"
watchdog = "^2.2.0"  # Improves streamlit performance


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
isort = "^5.11.4"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
pytest-mock = "^3.10.0"
flake8 = "^6.0.0"
pylint = "^2.15.9"
flake8-pyproject = "^1.2.2"

[tool.mypy]
strict = true

[tool.flake8]
max-line-length = 88

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

show_error_codes = true

